--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
         <div id="banner">
             <h1>my website</h1>
-            <a href="index.html">my website</a>
+            <a href="index.html">my Website</a>
             <a href="about.html">about my self</a> |
             <a href="gameguide.html">get to school</a>
             <p onclick="changeSheet()">Change Color</p>
