--- a/about.html
+++ b/about.html
@@ -21,8 +21,11 @@
                 <h2>About me</h2>
                 <p>My name is jeron and i like to play games. I also like to ride my bike. I am a nice persion and i get along with most people.I also like to go outside and hangout with friends. I also like to go fishing. I like to go ouside and enjoy nature.</p>
                 <img src="img/nature.jpg" alt="nature">
+                <h2>Some more facts about my self</h2>
+                <p>I like to listen to music alot. I also like to hangout with friends and much as I can becuase time is valuble. I think if you have the time do stuff and enjoy life beucase its short. </p>
             </div>
         </div>
+
         
     </div>
 </body>
